--- a/index.html
+++ b/index.html
@@ -152,6 +152,48 @@
           <h4 class="p-price">Kshs199.8</h4>
           <button class="buy-btn">Buy Now</button>
         </div>
+
+        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+          <img src="assets/imgs/featured2.jpg" alt="" class="img-fluid mb-3" />
+          <div class="star">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+          <h5 class="p-name">Sports Shoes</h5>
+          <h4 class="p-price">Kshs199.8</h4>
+          <button class="buy-btn">Buy Now</button>
+        </div>
+
+        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+          <img src="assets/imgs/featured3.jpg" alt="" class="img-fluid mb-3" />
+          <div class="star">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+          <h5 class="p-name">Sports Shoes</h5>
+          <h4 class="p-price">Kshs199.8</h4>
+          <button class="buy-btn">Buy Now</button>
+        </div>
+
+        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+          <img src="assets/imgs/featured4.jpg" alt="" class="img-fluid mb-3" />
+          <div class="star">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+          <h5 class="p-name">Sports Shoes</h5>
+          <h4 class="p-price">Kshs199.8</h4>
+          <button class="buy-btn">Buy Now</button>
+        </div>
       </div>
     </section>
 
