--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           class="img-fluid col-lg-3 col-md-6 col-sm-12"
         />
         <img
-          src="assets/imgs/brand4pg"
+          src="assets/imgs/brand4.jpg"
           alt=""
           class="img-fluid col-lg-3 col-md-6 col-sm-12"
         />
@@ -135,7 +135,7 @@
     <section id="featured" class="my-5 pb-5">
       <div class="container text-center mt-5 py-5">
         <h3>Our Featured</h3>
-        <hr />
+        <hr class="mx-auto" />
         <p>Here you can check out our Featured Products</p>
       </div>
       <div class="row mx-auto container-fluid">
@@ -162,8 +162,8 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
           </div>
-          <h5 class="p-name">Sports Shoes</h5>
-          <h4 class="p-price">Kshs199.8</h4>
+          <h5 class="p-name">Rolex-Clone</h5>
+          <h4 class="p-price">Kshs10,000</h4>
           <button class="buy-btn">Buy Now</button>
         </div>
 
@@ -176,8 +176,8 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
           </div>
-          <h5 class="p-name">Sports Shoes</h5>
-          <h4 class="p-price">Kshs199.8</h4>
+          <h5 class="p-name">Jeans Jacket</h5>
+          <h4 class="p-price">Kshs5000</h4>
           <button class="buy-btn">Buy Now</button>
         </div>
 
@@ -190,10 +190,22 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
           </div>
-          <h5 class="p-name">Sports Shoes</h5>
-          <h4 class="p-price">Kshs199.8</h4>
+          <h5 class="p-name">Bag</h5>
+          <h4 class="p-price">Kshs3000</h4>
           <button class="buy-btn">Buy Now</button>
         </div>
+      </div>
+    </section>
+
+    <!------Banner------->
+    <section id="banner" class="my-5 py-5">
+      <div class="container">
+        <h4>MID SEASON'S SALE</h4>
+        <h1>
+          Autumn Collection <br />
+          UP to 30% OFF
+        </h1>
+        <button class="text-uppercase">Shop Now</button>
       </div>
     </section>
 
