--- a/index.html
+++ b/index.html
@@ -200,12 +200,78 @@
     <!------Banner------->
     <section id="banner" class="my-5 py-5">
       <div class="container">
-        <h4>MID SEASON'S SALE</h4>
+        <h4>SEASON'S SALE</h4>
         <h1>
-          Autumn Collection <br />
+          Collection <br />
           UP to 30% OFF
         </h1>
         <button class="text-uppercase">Shop Now</button>
+      </div>
+    </section>
+
+    <!------Clothes------->
+    <section id="featured" class="my-5">
+      <div class="container text-center mt-5 py-5">
+        <h3>Dresses and Coats</h3>
+        <hr class="mx-auto" />
+        <p>Here you can check out our AMazing Clothes</p>
+      </div>
+      <div class="row mx-auto container-fluid">
+        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+          <img src="assets/imgs/clothes1.jpg" alt="" class="img-fluid mb-3" />
+          <div class="star">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+          <h5 class="p-name">Sports Shoes</h5>
+          <h4 class="p-price">Kshs199.8</h4>
+          <button class="buy-btn">Buy Now</button>
+        </div>
+
+        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+          <img src="assets/imgs/clothes2.jpg" alt="" class="img-fluid mb-3" />
+          <div class="star">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+          <h5 class="p-name">Rolex-Clone</h5>
+          <h4 class="p-price">Kshs10,000</h4>
+          <button class="buy-btn">Buy Now</button>
+        </div>
+
+        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+          <img src="assets/imgs/clothes3.jpg" alt="" class="img-fluid mb-3" />
+          <div class="star">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+          <h5 class="p-name">Jeans Jacket</h5>
+          <h4 class="p-price">Kshs5000</h4>
+          <button class="buy-btn">Buy Now</button>
+        </div>
+
+        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+          <img src="assets/imgs/clothes4.jpg" alt="" class="img-fluid mb-3" />
+          <div class="star">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+          <h5 class="p-name">Bag</h5>
+          <h4 class="p-price">Kshs3000</h4>
+          <button class="buy-btn">Buy Now</button>
+        </div>
       </div>
     </section>
 
