--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       <div class="container text-center mt-5 py-5">
         <h3>Dresses and Coats</h3>
         <hr class="mx-auto" />
-        <p>Here you can check out our AMazing Clothes</p>
+        <p>Here you can check out our Amazing Clothes</p>
       </div>
       <div class="row mx-auto container-fluid">
         <div class="product text-center col-lg-3 col-md-4 col-sm-12">
@@ -226,7 +226,7 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
           </div>
-          <h5 class="p-name">Sports Shoes</h5>
+          <h5 class="p-name">Cool-Men</h5>
           <h4 class="p-price">Kshs199.8</h4>
           <button class="buy-btn">Buy Now</button>
         </div>
@@ -240,7 +240,7 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
           </div>
-          <h5 class="p-name">Rolex-Clone</h5>
+          <h5 class="p-name">Clone-silk</h5>
           <h4 class="p-price">Kshs10,000</h4>
           <button class="buy-btn">Buy Now</button>
         </div>
@@ -254,8 +254,8 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
           </div>
-          <h5 class="p-name">Jeans Jacket</h5>
-          <h4 class="p-price">Kshs5000</h4>
+          <h5 class="p-name">Winter-Jacket</h5>
+          <h4 class="p-price">Kshs2500</h4>
           <button class="buy-btn">Buy Now</button>
         </div>
 
@@ -268,8 +268,74 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
           </div>
-          <h5 class="p-name">Bag</h5>
-          <h4 class="p-price">Kshs3000</h4>
+          <h5 class="p-name">Coat</h5>
+          <h4 class="p-price">Kshs2000</h4>
+          <button class="buy-btn">Buy Now</button>
+        </div>
+      </div>
+    </section>
+
+    <!------Shoes------->
+    <section id="featured" class="my-5">
+      <div class="container text-center mt-5 py-5">
+        <h3>Shoes</h3>
+        <hr class="mx-auto" />
+        <p>Here you can check out our AMazing Shoes</p>
+      </div>
+      <div class="row mx-auto container-fluid">
+        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+          <img src="assets/imgs/shoes1.jpg" alt="" class="img-fluid mb-3" />
+          <div class="star">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+          <h5 class="p-name">Luxury Casual Leather Sandals</h5>
+          <h4 class="p-price">Kshs3,500</h4>
+          <button class="buy-btn">Buy Now</button>
+        </div>
+
+        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+          <img src="assets/imgs/shoes2.jpg" alt="" class="img-fluid mb-3" />
+          <div class="star">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+          <h5 class="p-name">Martin boots</h5>
+          <h4 class="p-price">Kshs5,000</h4>
+          <button class="buy-btn">Buy Now</button>
+        </div>
+
+        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+          <img src="assets/imgs/shoes3.jpg" alt="" class="img-fluid mb-3" />
+          <div class="star">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+          <h5 class="p-name">Men's Sandals Flip-flops Boy's Anti-Slip</h5>
+          <h4 class="p-price">Kshs2,500</h4>
+          <button class="buy-btn">Buy Now</button>
+        </div>
+
+        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+          <img src="assets/imgs/shoes4.jpg" alt="" class="img-fluid mb-3" />
+          <div class="star">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+          <h5 class="p-name">White Shoes Breathable Rubber</h5>
+          <h4 class="p-price">Kshs2000</h4>
           <button class="buy-btn">Buy Now</button>
         </div>
       </div>
