new watch section added

--- a/index.html
+++ b/index.html
@@ -275,8 +275,74 @@
       </div>
     </section>
 
+    <!------Watches------->
+    <section id="watches" class="my-5">
+      <div class="container text-center mt-5 py-5">
+        <h3>Watches</h3>
+        <hr class="mx-auto" />
+        <p>Here you can check out our Amazing Watches</p>
+      </div>
+      <div class="row mx-auto container-fluid">
+        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+          <img src="assets/imgs/watch1.jpg" alt="" class="img-fluid mb-3" />
+          <div class="star">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+          <h5 class="p-name">NOBOSI chorograph</h5>
+          <h4 class="p-price">Kshs2.999.8</h4>
+          <button class="buy-btn">Buy Now</button>
+        </div>
+
+        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+          <img src="assets/imgs/watch2.jpg" alt="" class="img-fluid mb-3" />
+          <div class="star">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+          <h5 class="p-name">WWOOR-8017</h5>
+          <h4 class="p-price">Kshs10,000</h4>
+          <button class="buy-btn">Buy Now</button>
+        </div>
+
+        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+          <img src="assets/imgs/watch3.jpg" alt="" class="img-fluid mb-3" />
+          <div class="star">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+          <h5 class="p-name">Skone-2532 Pink strap ladies Watch</h5>
+          <h4 class="p-price">Kshs2,588</h4>
+          <button class="buy-btn">Buy Now</button>
+        </div>
+
+        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+          <img src="assets/imgs/watch4.jpg" alt="" class="img-fluid mb-3" />
+          <div class="star">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+          <h5 class="p-name">Current M8361</h5>
+          <h4 class="p-price">Kshs2,000</h4>
+          <button class="buy-btn">Buy Now</button>
+        </div>
+      </div>
+    </section>
+
     <!------Shoes------->
-    <section id="featured" class="my-5">
+    <section id="shoes" class="my-5">
       <div class="container text-center mt-5 py-5">
         <h3>Shoes</h3>
         <hr class="mx-auto" />
