--- a/index.html
+++ b/index.html
@@ -407,6 +407,30 @@
       </div>
     </section>
 
+    <!------footer------->
+    <footer class="mt-5 py-5">
+      <div class="row">
+        <div class="footer-one col-lg-3 col-md-6 col-sm-12">
+          <img src="assets/imgs/logo.jpg" alt="" />
+          <p class="pt-3">
+            We provide the best products for most affordable prices
+          </p>
+        </div>
+
+        <div class="footer-one col-lg-3 col-md-6 col-sm-12">
+          <h5 class="pb-2">Featured</h5>
+          <ul class="text-uppercase">
+            <li><a href="#">men</a></li>
+            <li><a href="#">women</a></li>
+            <li><a href="#">boys</a></li>
+            <li><a href="#">girls</a></li>
+            <li><a href="#">new arrivals</a></li>
+            <li><a href="#">clothes</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
