added new section

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <link rel="stylesheet" href="assets/css/index.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg py-4 bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg py-4 bg-body-tertiary fixed-top">
       <div class="container">
-        <img src="assets/imgs/logo.jpeg" alt="" />
-        <a class="navbar-brand" href="#">Navbar</a>
+        <img class="logo" src="assets/imgs/logo.jpg" alt="" />
+        <h2 class="brand"></h2>
         <button
           class="navbar-toggler"
           type="button"
@@ -409,9 +409,9 @@
 
     <!------footer------->
     <footer class="mt-5 py-5">
-      <div class="row">
+      <div class="row container mx-auto pt-5">
         <div class="footer-one col-lg-3 col-md-6 col-sm-12">
-          <img src="assets/imgs/logo.jpg" alt="" />
+          <img class="logo" src="assets/imgs/logo.jpg" alt="" />
           <p class="pt-3">
             We provide the best products for most affordable prices
           </p>
@@ -427,6 +427,67 @@
             <li><a href="#">new arrivals</a></li>
             <li><a href="#">clothes</a></li>
           </ul>
+        </div>
+        <div class="footer-one col-lg-3 col-md-6 col-sm-12">
+          <h5 class="pb-2">Contact Us</h5>
+          <div>
+            <h6 class="text-uppercase">Address</h6>
+            <p>123 Street Name, City</p>
+          </div>
+          <div>
+            <h6 class="text-uppercase">Phone</h6>
+            <p>+254703750755</p>
+          </div>
+          <div>
+            <h6 class="text-uppercase">Email</h6>
+            <p>kudezx@gmail.com</p>
+          </div>
+        </div>
+        <div class="footer-one col-lg-3 col-md-6 col-sm-12">
+          <h5 class="pb-2">Instagram</h5>
+          <div class="row">
+            <img
+              src="assets/imgs/featured1.jpg"
+              class="img-fluid w-25 h-100 m-2"
+              alt=""
+            />
+            <img
+              src="assets/imgs/featured2.jpg"
+              class="img-fluid w-25 h-100 m-2"
+              alt=""
+            />
+            <img
+              src="assets/imgs/featured3.jpg"
+              class="img-fluid w-25 h-100 m-2"
+              alt=""
+            />
+            <img
+              src="assets/imgs/featured4.jpg"
+              class="img-fluid w-25 h-100 m-2"
+              alt=""
+            />
+            <img
+              src="assets/imgs/clothes4.jpg"
+              class="img-fluid w-25 h-100 m-2"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+      <div class="copyright mt-5">
+        <div class="row container mx-auto">
+          <div class="col-lg-3 col-md-5 col-sm-12 mb-4">
+            <img src="assets/imgs/payment.jpg" alt="" />
+          </div>
+          <div class="col-lg-3 col-md-5 col-sm-12 mb-4 text-nowrap mb-2">
+            <p class="">eCommerce@2025 All Rights Reserved</p>
+          </div>
+          <div class="col-lg-3 col-md-5 col-sm-12 mb-4">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-github"></i></a>
+          </div>
         </div>
       </div>
     </footer>
