--- a/shop.html
+++ b/shop.html
@@ -68,10 +68,10 @@
     </nav>
 
     <!------Featured------->
-    <section id="featured" class="my-5 pb-5">
-      <div class="container text-center mt-5 py-5">
+    <section id="featured" class="my-5 py-5">
+      <div class="container mt-5 py-5">
         <h3>Our Featured</h3>
-        <hr class="mx-auto" />
+        <hr />
         <p>Here you can check out our Featured Products</p>
       </div>
       <div class="row mx-auto container-fluid">
@@ -132,7 +132,7 @@
         </div>
 
         <div class="product text-center col-lg-3 col-md-4 col-sm-12">
-          <img src="assets/imgs/featured1.jpg" alt="" class="img-fluid mb-3" />
+          <img src="assets/imgs/clothes1.jpg" alt="" class="img-fluid mb-3" />
           <div class="star">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -140,13 +140,13 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
           </div>
-          <h5 class="p-name">Sports Shoes</h5>
-          <h4 class="p-price">Kshs199.8</h4>
+          <h5 class="p-name">Cool-Men</h5>
+          <h4 class="p-price">Kshs1999.8</h4>
           <button class="buy-btn">Buy Now</button>
         </div>
 
         <div class="product text-center col-lg-3 col-md-4 col-sm-12">
-          <img src="assets/imgs/featured2.jpg" alt="" class="img-fluid mb-3" />
+          <img src="assets/imgs/clothes2.jpg" alt="" class="img-fluid mb-3" />
           <div class="star">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -154,13 +154,13 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
           </div>
-          <h5 class="p-name">Rolex-Clone</h5>
+          <h5 class="p-name">Clone-silk</h5>
           <h4 class="p-price">Kshs10,000</h4>
           <button class="buy-btn">Buy Now</button>
         </div>
 
         <div class="product text-center col-lg-3 col-md-4 col-sm-12">
-          <img src="assets/imgs/featured3.jpg" alt="" class="img-fluid mb-3" />
+          <img src="assets/imgs/clothes3.jpg" alt="" class="img-fluid mb-3" />
           <div class="star">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -168,13 +168,13 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
           </div>
-          <h5 class="p-name">Jeans Jacket</h5>
-          <h4 class="p-price">Kshs5000</h4>
+          <h5 class="p-name">Winter-Jacket</h5>
+          <h4 class="p-price">Kshs2500</h4>
           <button class="buy-btn">Buy Now</button>
         </div>
 
         <div class="product text-center col-lg-3 col-md-4 col-sm-12">
-          <img src="assets/imgs/featured4.jpg" alt="" class="img-fluid mb-3" />
+          <img src="assets/imgs/clothes4.jpg" alt="" class="img-fluid mb-3" />
           <div class="star">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -182,13 +182,41 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
           </div>
-          <h5 class="p-name">Bag</h5>
+          <h5 class="p-name">Coat</h5>
+          <h4 class="p-price">Kshs2000</h4>
+          <button class="buy-btn">Buy Now</button>
+        </div>
+
+        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+          <img src="assets/imgs/featured5.jpg" alt="" class="img-fluid mb-3" />
+          <div class="star">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+          <h5 class="p-name">Short-Sleeved</h5>
+          <h4 class="p-price">Kshs1500</h4>
+          <button class="buy-btn">Buy Now</button>
+        </div>
+
+        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+          <img src="assets/imgs/featured6.jpg" alt="" class="img-fluid mb-3" />
+          <div class="star">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+          <h5 class="p-name">Dry Cargo Pants</h5>
           <h4 class="p-price">Kshs3000</h4>
           <button class="buy-btn">Buy Now</button>
         </div>
 
         <div class="product text-center col-lg-3 col-md-4 col-sm-12">
-          <img src="assets/imgs/featured1.jpg" alt="" class="img-fluid mb-3" />
+          <img src="assets/imgs/featured7.jpg" alt="" class="img-fluid mb-3" />
           <div class="star">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -196,13 +224,13 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
           </div>
-          <h5 class="p-name">Sports Shoes</h5>
-          <h4 class="p-price">Kshs199.8</h4>
+          <h5 class="p-name">URRU Men's Polo Shirt and Shorts</h5>
+          <h4 class="p-price">Kshs5000</h4>
           <button class="buy-btn">Buy Now</button>
         </div>
 
         <div class="product text-center col-lg-3 col-md-4 col-sm-12">
-          <img src="assets/imgs/featured2.jpg" alt="" class="img-fluid mb-3" />
+          <img src="assets/imgs/featured8.jpg" alt="" class="img-fluid mb-3" />
           <div class="star">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -210,13 +238,43 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
           </div>
-          <h5 class="p-name">Rolex-Clone</h5>
+          <h5 class="p-name">
+            Muscle Polo Shirts for Men Slim Fit Short Sleeve Golf Shirts
+          </h5>
+          <h4 class="p-price">Kshs3000</h4>
+          <button class="buy-btn">Buy Now</button>
+        </div>
+
+        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+          <img src="assets/imgs/watch1.jpg" alt="" class="img-fluid mb-3" />
+          <div class="star">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+          <h5 class="p-name">NOBOSI chorograph</h5>
+          <h4 class="p-price">Kshs2999.8</h4>
+          <button class="buy-btn">Buy Now</button>
+        </div>
+
+        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
+          <img src="assets/imgs/watch2.jpg" alt="" class="img-fluid mb-3" />
+          <div class="star">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </div>
+          <h5 class="p-name">WWOOR-8017</h5>
           <h4 class="p-price">Kshs10,000</h4>
           <button class="buy-btn">Buy Now</button>
         </div>
 
         <div class="product text-center col-lg-3 col-md-4 col-sm-12">
-          <img src="assets/imgs/featured3.jpg" alt="" class="img-fluid mb-3" />
+          <img src="assets/imgs/watch3.jpg" alt="" class="img-fluid mb-3" />
           <div class="star">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -224,13 +282,13 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
           </div>
-          <h5 class="p-name">Jeans Jacket</h5>
-          <h4 class="p-price">Kshs5000</h4>
+          <h5 class="p-name">Skone-2532 Pink strap ladies Watch</h5>
+          <h4 class="p-price">Kshs2,588</h4>
           <button class="buy-btn">Buy Now</button>
         </div>
 
         <div class="product text-center col-lg-3 col-md-4 col-sm-12">
-          <img src="assets/imgs/featured4.jpg" alt="" class="img-fluid mb-3" />
+          <img src="assets/imgs/watch4.jpg" alt="" class="img-fluid mb-3" />
           <div class="star">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -238,64 +296,8 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
           </div>
-          <h5 class="p-name">Bag</h5>
-          <h4 class="p-price">Kshs3000</h4>
-          <button class="buy-btn">Buy Now</button>
-        </div>
-
-        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
-          <img src="assets/imgs/featured1.jpg" alt="" class="img-fluid mb-3" />
-          <div class="star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-          </div>
-          <h5 class="p-name">Sports Shoes</h5>
-          <h4 class="p-price">Kshs199.8</h4>
-          <button class="buy-btn">Buy Now</button>
-        </div>
-
-        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
-          <img src="assets/imgs/featured2.jpg" alt="" class="img-fluid mb-3" />
-          <div class="star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-          </div>
-          <h5 class="p-name">Rolex-Clone</h5>
-          <h4 class="p-price">Kshs10,000</h4>
-          <button class="buy-btn">Buy Now</button>
-        </div>
-
-        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
-          <img src="assets/imgs/featured3.jpg" alt="" class="img-fluid mb-3" />
-          <div class="star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-          </div>
-          <h5 class="p-name">Jeans Jacket</h5>
-          <h4 class="p-price">Kshs5000</h4>
-          <button class="buy-btn">Buy Now</button>
-        </div>
-
-        <div class="product text-center col-lg-3 col-md-4 col-sm-12">
-          <img src="assets/imgs/featured4.jpg" alt="" class="img-fluid mb-3" />
-          <div class="star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-          </div>
-          <h5 class="p-name">Bag</h5>
-          <h4 class="p-price">Kshs3000</h4>
+          <h5 class="p-name">Current M8361</h5>
+          <h4 class="p-price">Kshs2,000</h4>
           <button class="buy-btn">Buy Now</button>
         </div>
       </div>
